@@ -10,3 +10,4 @@ NEW
 
 FIXES
     - Adjust quest view position for a number of Shadowlands NPCs
+    - Possible fix for "ZoneabilityContainer"
